--- a/src/Stylesheets/Navbar.css
+++ b/src/Stylesheets/Navbar.css
@@ -2,3 +2,9 @@
     transition: .3s ease-in-out;
     z-index: 100;
 }
+
+.progress-fill{
+    height: 3px;
+    background-color: white;
+    transition: width 0.3s ease-in-out;
+}
